--- a/newproject/view/user/register.html
+++ b/newproject/view/user/register.html
@@ -20,13 +20,13 @@
             <div class="ms-login">
                 <el-form :model="ruleForm" :rules="rules" ref="ruleForm" label-width="0px" class="demo-ruleForm">
                     <el-form-item prop="username">
-                        <el-input v-model="ruleForm.username" placeholder="username"></el-input>
+                        <el-input class="frominput" v-model="ruleForm.username" placeholder="请输入用户名"></el-input>
                     </el-form-item>
                     <el-form-item prop="password">
-                        <el-input type="password" placeholder="password" v-model="ruleForm.password" @keyup.enter.native="submitForm('ruleForm')"></el-input>
+                        <el-input class="frominput"  type="password" placeholder="请输入密码" v-model="ruleForm.password" @keyup.enter.native="submitForm('ruleForm')"></el-input>
                     </el-form-item>
                     <div class="login-btn">
-                        <el-button type="primary" @click="RegisterForm('ruleForm')">注册</el-button>
+                        <el-button class="frominput" type="primary" @click="RegisterForm('ruleForm')">注册</el-button>
                     </div>
                    <a class="registerlogin" href="login-index"><i class="iconfont el-icon-icfont-diannao1 mr5">已有账户</i></a>
                 </el-form>
