--- a/newproject/static/css/index.css
+++ b/newproject/static/css/index.css
@@ -10,11 +10,12 @@
     float: left;
     padding: 0 21px;
     cursor: pointer;
-    line-height: 70px;
+ 
 }
 .header .logo{
     float: left;
     line-height: 70px;
+    margin-left: 20px;
 }
 .header-right{
     float: right;
@@ -59,8 +60,8 @@
 }
 .user-avator img{
     display: block;
-    width:40px;
-    height:40px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
 }
 .el-dropdown-link{
@@ -69,4 +70,44 @@
 }
 .el-dropdown-menu__item{
     text-align: center;
+}
+
+.sidebarbox{
+    position: fixed;
+    background: #fff;
+    top: 75px;
+    left: 220px;
+    z-index: 1000;
+    box-shadow: 0px 0px 3px 3px #cec4c42e;
+    font-size: 18px;
+    border-radius: 3px;
+}
+.sidebarbox::after{
+    content: '';
+    position: absolute;
+    background-image: url(/static/img/coinsss.png);
+    width: 30px;
+    height: 20px;
+    top: -20px;
+    left: 10px;
+}
+.sidebarbox ul{
+   height: 100%;
+}
+.sidebarbox ul li{
+    float: left;
+    cursor: pointer;
+    width: 104px;
+    height: 104px;
+    text-align: center;
+}
+.sidebarbox ul li div{
+    width: 100%;
+    height: 50%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.submitbut{
+    float: right;
 }
