--- a/newproject/static/css/user.css
+++ b/newproject/static/css/user.css
@@ -19,7 +19,7 @@
 
 .ms-login {
     width: 300px;
-    height: 160px;
+    height: 170px;
     margin: auto;
     padding: 40px;
     border-radius: 5px;
@@ -37,5 +37,10 @@
 
 .registerlogin {
 	float: right;
-	margin-top: 10px;
+    margin-top: 15px;
+    font-size:14px;
+}
+
+.frominput input{
+    height: 40px;
 }
