--- a/newproject/view/user/login.html
+++ b/newproject/view/user/login.html
@@ -19,16 +19,16 @@
             <div class="ms-login">
                 <el-form :model="ruleForm" :rules="rules" ref="ruleForm" label-width="0px" class="demo-ruleForm">
                     <el-form-item prop="username">
-                        <el-input v-model="ruleForm.username" placeholder="username"></el-input>
+                        <el-input class="frominput" v-model="ruleForm.username" placeholder="请输入用户名" ></el-input>
                     </el-form-item>
                     <el-form-item prop="password">
-                        <el-input type="password" placeholder="password" v-model="ruleForm.password" @keyup.enter.native="submitForm('ruleForm')"></el-input>
+                        <el-input class="frominput" type="password" placeholder="请输入密码" v-model="ruleForm.password" @keyup.enter.native="loginForm('ruleForm')"></el-input>
                     </el-form-item>
                     <div class="login-btn">
-                        <el-button type="primary" @click="loginForm('ruleForm')">登录</el-button>
+                        <el-button class="frominput" type="primary" @click="loginForm('ruleForm')">登录</el-button>
                     </div>
-                   <a class="registerlogin" href="register-index"><i class="iconfont el-icon-icfont-diannao1 mr5">请注册</i></a>
                 </el-form>
+                <a class="registerlogin" href="register-index"><i class="iconfont el-icon-icfont-diannao1 mr5">注册</i></a>
             </div>
         </div>
     </div>
